fix: ensure text remains visible during webfont load fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,19 @@
 @font-face {
   font-family: 'Lato-Regular';
   src: url('/fonts/Lato/Lato-Regular.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Lato-Bold';
   src: url('/fonts/Lato/Lato-Bold.ttf');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Lato-Black';
   src: url('/fonts/Lato/Lato-Black.ttf');
+  font-display: swap;
 }
 
 :root {
